<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_choose"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_radioAdd" />

            <RadioButton
                android:id="@+id/radioUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_radioUpdate" />

            <RadioButton
                android:id="@+id/radioDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_radioDelete" />

            <RadioButton
                android:id="@+id/radioSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_radioSelect" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_rfid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_rfid" />

            <EditText
                android:id="@+id/ed_rfid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/ed_rfid"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_varieties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_varieties" />

            <EditText
                android:id="@+id/ed_varieties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/ed_varieties"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_region" />

            <Spinner
                android:id="@+id/sp_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:entries="@array/region" />

            <TextView
                android:id="@+id/tv_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_plant" />

            <EditText
                android:id="@+id/ed_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:hint="@string/ed_plant"
                android:inputType="date"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_harvest" />

            <EditText
                android:id="@+id/ed_harvest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:hint="@string/ed_harvest"
                android:inputType="date"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submit"
            android:text="@string/bt_submit" />

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/list_head_bg" >

                <CheckBox
                    android:id="@+id/checkBoxAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/tv_rfid" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tv_varieties" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tv_region" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tv_plant" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tv_harvest" />
            </LinearLayout>

            <ListView
                android:id="@+id/listView_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/list_head_bg" >

               <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/c_na" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/sensor_type"/>
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/sensor_data" />
                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/timestamp" />
            </LinearLayout>

            <ListView
                android:id="@+id/listView_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>